--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grafer-ein-express",
   "version": "1.0.0",
   "dependencies": {
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "openai": "^4.0.0"
   }
 }
